# xrd_tools

./: .gitignore  CristalStructure.py  Diffractometer.py  FormFactor.py  Geometry.py  Math.py  README.md  Reflectometry.py  ReflectometryP.py  Reflectometry_old.py  Space.py  Spectrum.py  __init__.py  pyproject.toml
Examples/: Mapping.py  Thickness.py  Thickness_With_Substrate.py  XRD_AlN.py  XRD_Er2Ti2O7_Cubic.py  XRD_Er2Ti2O7_Rhombo.py  XRD_STO.py  XRD_Si.py  XRD_TmMnO3.py  XRD_YSZ.py  XiZeta_to_Alpha_Phi.py  peak_position.py
LaTeX/: Theory.tex
LaTeX/Sections/: Geometry.tex  Junk.tex  Measurement.tex  Reflectometry.tex  Reflectometry_Mu0.tex
Tests/: test_CristalStructure.py  test_FormFactor.py  test_Geometry.py  test_Reflectometry.py  test_Reflectometry_old.py  test_Spectrum.py  test_XRR.py  test_wyckoff.py
old_tests/: test_FormFactor.py  test_Geometry.py  test_Reflectometry.py  test_Reflectometry_old.py  test_Spectrum.py  test_XRR.py  test_wyckoff.py
tests/: test_cristal_structure.py
xrd_tools/: __init__.py  analysis.py  diffractometer.py  functions.py  geometry.py  math.py  reflectometry.py  sources.py  space.py  spectrum.py  vector.py
xrd_tools/cristal_structure/: general_cristal_structures.py  numbered_cristal_structures.py  wyckoff.py
xrd_tools/cristal_structures/: __init__.py  general_cristal_structures.py  numbered_cristal_structures.py
