[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xrd_tools"
authors = [{name = "Maxime Dion", email = "maxime.diom@me.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/oneminimax/xrd_tools"
